--- a/football__7.html
+++ b/football__7.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Styles/blog.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In omnis nulla at sed ex dolorum, eius natus eligendi aliquid quasi ad, deserunt tempora, cumque aspernatur. Voluptates vitae in incidunt quia.</p>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In omnis nulla at sed ex dolorum, eius natus eligendi aliquid quasi ad, deserunt tempora, cumque aspernatur. Voluptates vitae in incidunt quia.</p>
+    </div>
+
+    <div>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro amet aliquam corrupti pariatur magnam iste facilis iure recusandae consequuntur repudiandae accusamus aliquid officia, itaque praesentium eaque omnis cupiditate neque earum.</p>
+    </div>
 </body>
 </html>
